--- a/coins/templates/index.html
+++ b/coins/templates/index.html
@@ -22,7 +22,7 @@
 			<nav class="nav">
 				<div class="container">
 					<div class="nav__menu">
-						<a href="/" class="nav__header">NZT Token</a>
+						<a href="/" class="nav__header">Token</a>
                        
 					</div>
 				</div>
